--- a/contact.html
+++ b/contact.html
@@ -20,37 +20,39 @@
         </header>
         <h1>Contact Me</h1>
         <div class="box-Contact">
-            <fieldset>
-                <legend><b>Enter your info :</b></legend>
-                <div class="contact-Name">
-                    <label for="Name"><b>Your Name :</b><br>
-                        <input type="text" name="Name" id="Name" placeholder="Fullname">
-                    </label>
-                </div>
-                <div class="contact-Email">
-                    <label for="Email"><b>Your Email :</b><br>
-                        <input type="text" name="Email" id="Email" placeholder="Example@mail.com">
-                    </label>
-                </div>
-                <div class="contact-Gender">
-                    <label for="gender"><b>Gender :</b></label>
-                    <select name="gender" id="Gender">
-                        <option value="0">Select</option>
-                        <option value="male">Male</option>
-                        <option value="female">Female</option>
-                    </select>
-                </div>
-                <div class="contact-Message">
-                    <p style="margin: 0px 0px 0px 0px;"><b>Message :</b></p>
-                    <textarea name="message" id="Message" cols="30" rows="10" placeholder="Message here"></textarea>
-                </div>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Clear">
-                <!-- <button type="submit" id="submit">Send</button>
+            <form action="./index.html">
+                <fieldset>
+                    <legend><b>Enter your info :</b></legend>
+                    <div class="contact-Name">
+                        <label for="Name"><b>Your Name :</b><br>
+                            <input type="text" name="Name" id="Name" placeholder="Fullname">
+                        </label>
+                    </div>
+                    <div class="contact-Email">
+                        <label for="Email"><b>Your Email :</b><br>
+                            <input type="text" name="Email" id="Email" placeholder="Example@mail.com">
+                        </label>
+                    </div>
+                    <div class="contact-Gender">
+                        <label for="gender"><b>Gender :</b></label>
+                        <select name="gender" id="Gender">
+                            <option value="0">Select</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                        </select>
+                    </div>
+                    <div class="contact-Message">
+                        <p style="margin: 0px 0px 0px 0px;"><b>Message :</b></p>
+                        <textarea name="message" id="Message" cols="30" rows="10" placeholder="Message here"></textarea>
+                    </div>
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Clear">
+                    <!-- <button type="submit" id="submit">Send</button>
                 <button type="reset" id="reset">Reset</button> -->
-                </div>
-        </fieldset>
         </div>
+        </fieldset>
+        </form>
+    </div>
     </div>
     </div>
 </body>
