--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </header>
         <h1>Contact Me</h1>
         <div class="box-Contact">
-            <form action="./index.html">
+            <form action="#">
                 <fieldset>
                     <legend><b>Enter your info :</b></legend>
                     <div class="contact-Name">
@@ -36,7 +36,8 @@
                     <div class="contact-Gender">
                         <label for="gender"><b>Gender :</b></label>
                         <select name="gender" id="Gender">
-                            <option value="0">Select</option>
+                            <option value selected disabled hidden>Select</option>
+                            <!-- <option value="0">Select</option> -->
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
